--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SayItOutv1</string>
     <string name="say_it_out">Say It Out</string>
+    <string name="menu_admin">Admin</string>
+    <string name="menu_about">About</string>
 </resources>
